--- a/personal_portfolio/styles.css
+++ b/personal_portfolio/styles.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: #232426;
   color: #f0f0ec;
   box-sizing: border-box;
 }
@@ -62,14 +61,6 @@ main {
   z-index: 1;
 }
 
-/* #About,
-#Work,
-#Contact {
-  min-width: 300px;
-  width: 100%;
-  height: 700px;
-} */
-
 #About {
   min-width: 300px;
   width: 100vw;
@@ -77,9 +68,14 @@ main {
   text-align: center;
   display: table-cell;
   vertical-align: middle;
+  background-color: #232426;
 }
 
-#welcome-section {
+a{
+  text-decoration: none;
+}
+
+#welcome {
   font-size: 4rem;
   font-family: "Raleway", sans-serif;
 }
@@ -90,29 +86,127 @@ main {
   color: #b92d31;
 }
 
-#Work{
-    position: inherit;
+#Work {
+  min-width: 300px;
+  width: 100vw;
+  height: 180vh;
+  text-align: center;
+  background-color: #45567d;
+}
+
+#work-title {
+  padding-top: 65px;
+  display: inline-block;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  font-size: 3rem;
 }
 
 #projects {
+  width: 90%;
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 16px;
+}
+
+.project-text:hover::before{
+ content: "< ";
+ color:red;
+}
+
+.project-text:hover::after{
+  content: " />";
+  color:red;
+ }
+
+.work-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+}
+
+.project-tile {
+  width: 400px;
+  margin: 8px;
+  background-color: #303841;
+}
+
+.project-text {
+  margin: 0 24px;
+  padding: 16px;
+  font-size: 24px;
+}
+
+button {
+  width: 150px;
+  margin-top: 50px;
+  padding: 16px;
+  background-color: #303841;
+  color: white;
+  font-size: 1.5rem;
+  border: none;
+}
+
+#Contact {
   width: 100%;
-  min-width: 300px;
-  height: 100vh;
-  background-color: #45567D;
-  display:inline-grid;
-gap:40px;
-float:left;
+  height: 100%;
+  background-color: #303841;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
-.project-tile{
-    background-color: #45567D; 
-    width: 20vw;
-    height: 20vw;
-    
+hr {
+  height: 3px;
+  background-color: #be3144;
+  border: none;
 }
 
-#Work>p{
-    text-align: center;
+#contact-title{
+  font-size: 4rem;
 }
 
+#contact-text{
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: 200;
+}
 
+#social-medias{
+  margin:24px 0;
+}
+
+.social-media{
+ display: inline;
+ padding: 8px 24px;
+ font-size:1.7rem;
+ position: relative;
+}
+
+.social-media:hover{
+  top: -10px;
+  cursor: pointer;
+}
+
+ footer {
+  background-color: #303841;
+  width: 100%;
+  height:100px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#footer-div>p{
+  display: inline;
+  padding: 0 24px; 
+  font-size: 1.5rem;
+} 
