--- a/personal_portfolio/styles.css
+++ b/personal_portfolio/styles.css
@@ -26,13 +26,125 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 1300px) {
+  #Work {
+    height: 180vh;
+  }
+  #projects {
+    width: 90%;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    gap: 16px;
+  }
+  img {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+  }
+  .project-tile {
+    width: 400px;
+    margin: 8px;
+    background-color: #303841;
+  }
+  #footer-div > p {
+    display: inline;
+    padding: 0 24px;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  #Work {
+    height: 250vh;
+  }
+  #projects {
+    width: 90%;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    gap: 16px;
+  }
+  img {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+  }
+  .project-tile {
+    width: 400px;
+    margin: 8px;
+    background-color: #303841;
+  }
+  #footer-div > p {
+    display: inline;
+    padding: 0 24px;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #projects {
+    width: 90%;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    gap: 16px;
+  }
+  #Work {
+    height: 200vh;
+  }
+
+  img {
+    width: 300px;
+    height: 250px;
+    object-fit: cover;
+  }
+  .project-tile {
+    width: 300px;
+    margin: 8px;
+    background-color: #303841;
+  }
+  #footer-div > p {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #projects {
+    width: 90%;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    gap: 16px;
+  }
+  #Work {
+    height: 2500px;
+  }
+
+  img {
+    width: 300px;
+    height: 250px;
+    object-fit: cover;
+  }
+  .project-tile {
+    width: 300px;
+    margin: 8px;
+    background-color: #303841;
+  }
+  #footer-div > p {
+    display: block;
+  }
 }
 
 body {
   min-width: 400px;
   margin-left: auto;
   margin-right: auto;
+  background-color: #232426;
 }
 nav {
   overflow: hidden;
@@ -63,15 +175,17 @@ main {
 
 #About {
   min-width: 300px;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   text-align: center;
-  display: table-cell;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   background-color: #232426;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -88,8 +202,7 @@ a{
 
 #Work {
   min-width: 300px;
-  width: 100vw;
-  height: 180vh;
+  width: 100%;
   text-align: center;
   background-color: #45567d;
 }
@@ -102,40 +215,20 @@ a{
   font-size: 3rem;
 }
 
-#projects {
-  width: 90%;
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  gap: 16px;
+.project-text:hover::before {
+  content: "< ";
+  color: red;
 }
 
-.project-text:hover::before{
- content: "< ";
- color:red;
-}
-
-.project-text:hover::after{
+.project-text:hover::after {
   content: " />";
-  color:red;
- }
+  color: red;
+}
 
 .work-box {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-img {
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-}
-
-.project-tile {
-  width: 400px;
-  margin: 8px;
-  background-color: #303841;
 }
 
 .project-text {
@@ -170,43 +263,38 @@ hr {
   border: none;
 }
 
-#contact-title{
+#contact-title {
   font-size: 4rem;
 }
 
-#contact-text{
+#contact-text {
   font-size: 1.5rem;
   font-style: italic;
   font-weight: 200;
 }
 
-#social-medias{
-  margin:24px 0;
+#social-medias {
+  margin: 24px 0;
 }
 
-.social-media{
- display: inline;
- padding: 8px 24px;
- font-size:1.7rem;
- position: relative;
+.social-media {
+  display: inline;
+  padding: 8px 24px;
+  font-size: 1.7rem;
+  position: relative;
 }
 
-.social-media:hover{
+.social-media:hover {
   top: -10px;
   cursor: pointer;
 }
 
- footer {
+footer {
   background-color: #303841;
   width: 100%;
-  height:100px;
+  height: 100px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
-#footer-div>p{
-  display: inline;
-  padding: 0 24px; 
-  font-size: 1.5rem;
-} 
